--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,12 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=kavita.db"
   },
-  "TokenKey": "super secret unguessable key",
-  "StatsOptions": {
-    "ServerUrl": "http://localhost:5002",
-    "ServerSecret": "here's where the api key goes",
-    "SendDataAt": "23:50"
-  },
+  "TokenKey": "super secret unguessable key 2",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
