--- a/Kavita.Update/Kavita.Update.csproj
+++ b/Kavita.Update/Kavita.Update.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,7 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\API\API.csproj" />
+        <ProjectReference Include="..\Kavita.Common\Kavita.Common.csproj" />
+        <ProjectReference Include="..\API\API.csproj" />
     </ItemGroup>
+    
 
 </Project>
