--- a/UI/Web/angular.json
+++ b/UI/Web/angular.json
@@ -39,7 +39,7 @@
             },
             "styles": [
               "src/styles.scss",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
             ],
             "scripts": [
               "node_modules/lazysizes/lazysizes.min.js",
